--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,8 @@ web-build/
 # macOS
 .DS_Store
 
+*.log
+*.lock
+
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
